fixed right left spacing issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,8 +34,12 @@ button {
     padding-left: 8px;
   }
   .container {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  header .container,
+  .hero .container {
+    padding-right: 0;
   }
 }
 
